prod-croatia-sonarqube-main@50d5a241017/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: sonarqube
    istio-injection: disabled
  name: sonarqube
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    openshift.io/sa.scc.mcs: "s0:c27,c19"
    openshift.io/sa.scc.supplemental-groups: "1000980000/10000"
    openshift.io/sa.scc.uid-range: "1000980000/10000"
