prod-croatia-sonarqube-main@50d5a241017/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-postgresql
  namespace: sonarqube
spec:
  serviceName: sonarqube-postgresql-headless
  template:
    metadata:
      labels:
        name: sonarqube-postgresql
    spec:
      volumes:
      - name: pg-conf
        emptyDir: {}
      - name: pg-tmp
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      containers:
        - name: sonarqube-postgresql
          volumeMounts:
          - mountPath: /opt/bitnami/postgresql/conf
            name: pg-conf
          - mountPath: /opt/bitnami/postgresql/tmp
            name: pg-tmp
          - mountPath: /tmp
            name: tmp
