prod-croatia-sonarqube-main@50d5a241017/sonarqube-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-sonarqube
spec:
  serviceName: sonarqube-sonarqube-headless
  template:
    metadata:
      labels:
        name: sonarqube-sonarqube

    spec:
      volumes:
      - name: sonarqube-downloads
        emptyDir: {}
      containers:
        - name: sonarqube
          livenessProbe:
            timeoutSeconds: 5
          readinessProbe:
            timeoutSeconds: 5
          startupProbe:
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
              ephemeral-storage: "5Gi"
            limits:
              cpu: "1"
              memory: 2Gi
              ephemeral-storage: "10Gi"
          securityContext:
            runAsUser: 1000980010
            runAsGroup: 1000980010
            readOnlyRootFilesystem: true
          volumeMounts:
          - mountPath: /opt/sonarqube/extensions/downloads
            name: sonarqube-downloads
