prod-croatia-sonarqube-main@50d5a241017/sonarqube-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
    release: sonarqube
  name: sonarqube-sonarqube-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: http
  selector:
    app: sonarqube
    release: sonarqube
  type: ClusterIP
