prod-croatia-sonarqube-main@50d5a241017/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  host: sonarqube.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: sonarqube-sonarqube
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
